samples/_failures_safe/1761604661_de8696_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94f702c5.c: In function ‘main’:
./samples/SAFE/__tmp_94f702c5.c:163: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_94f702c5.c:162:13: error: expected declaration or statement at end of input
  162 |             if
      |             ^~
./samples/SAFE/__tmp_94f702c5.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94f702c5.c:162:13: error: expected declaration or statement at end of input
